@@ -34,13 +34,7 @@ import javafx.geometry.Insets;
 import javafx.scene.Node;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.scene.control.Button;
-import javafx.scene.control.CheckBox;
-import javafx.scene.control.Label;
-import javafx.scene.control.ListView;
-import javafx.scene.control.MultipleSelectionModel;
-import javafx.scene.control.Separator;
-import javafx.scene.control.TextField;
+import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyCode;
@@ -427,7 +421,6 @@ public class RecipesWindowCtrl {
             ingCtrl.setIndex(i);
             VBox.setVgrow(ingNode, Priority.ALWAYS);
             recipeView.getChildren().add(ingNode);
-
             Long ingredientId = (ri.getIngredient() != null) ? ri.getIngredient().getId() : null;
             long recipeId = currentRecipe.getId();
 
@@ -440,53 +433,61 @@ public class RecipesWindowCtrl {
                     if (!success) {
                         errorCtrl.showGenericError("Failed to delete ingredient from server.");
                     }
+                    System.out.println("Ingredient \"" + ri.getIngredient().getName() + "\" deleted successfully");
                     return;
                 }
                 openRecipe(currentRecipe);
             });
-            // Editing ingredient Logic!
-            ingCtrl.setEditIngredient(() -> {
+            ingCtrl.setEditIngredient(() -> {             // Editing ingredient Logic!
                 handleIngredientInput(ri.getIngredient().getName(), ri.getQuantity(), (newName, newQty) -> {
                     ri.setQuantity(newQty);
                     ri.getIngredient().setName(newName);
                     openRecipe(currentRecipe);
+                    server.updateRecipe(currentRecipe);
+                    System.out.println("Ingredient \"" + ri.getIngredient().getName() + "\" updated successfully");
                 });
             });
         }
-        //button for adding an ingredient --> pop up window will show
-        Button addButton = new Button("Add Ingredient");
+        //menu button for adding an ingredient --> shows all currently saved ingredients! On click: add it to recipe.
+        SplitMenuButton addButton = new SplitMenuButton("Add Ingredient");
         recipeView.getChildren().add(addButton);
-        addButton.setOnAction(e -> {
-            showIngredientPopUp("Name", "0.0").ifPresent(pair -> {
-                String name = pair.getKey();
-                String quantityText = pair.getValue(); //extraction name and quantity
-
-                double quantity;
-                try {  //converting string value of quantity to double
-                    quantity = Double.parseDouble(quantityText);
-                } catch (NumberFormatException err) {
-                    if (errorCtrl != null) {
-                        errorCtrl.showGenericError("Quantity must be a number.");
-                    }
-                    return;
-                }
-                recipeIngredients.add(new RecipeIngredient(currentRecipe,
-                        new Ingredient(name, defaultNutritionalValue), quantity));
-            });
-            Recipe updated = server.updateRecipe(currentRecipe);
-            if (updated == null) {
-                errorCtrl.showServerUnavailableError();
-                return;
-            }
-            applyUpdatedRecipe(updated);
-            openRecipe(currentRecipe);
+        addButton.setOnAction((a) -> {
+            Optional<Ingredient> parsed = primaryCtrl.getIngredientsWindowCtrl().handlePlusButtonPress();
+            parsed.ifPresent(ingredient -> recipeIngredients.add(new RecipeIngredient(currentRecipe,
+                    ingredient, 0.0)));
+            updateRefresh();
         });
+        addButton.setOnShowing((a) -> storage.getIngredients().forEach(ingredient -> {
+            MenuItem menu = new MenuItem(ingredient.getName());
+            menu.setId(ingredient.getId().toString());
+            menu.setOnAction((actionEvent) -> {
+                recipeIngredients.add(new RecipeIngredient(currentRecipe,
+                        ingredient, 0.0));
+                System.out.println("Added a new ingredient \"" + ingredient.getName() + "\" to \"" + currentRecipe.getName() + "\"");
+                updateRefresh();
+            });
+            addButton.getItems().add(menu);
+        }));
         recipeView.requestLayout();
     }
 
     /**
+     * Updates the current recipe and refreshes it to reflect changes made
+     */
+    public void updateRefresh() {
+        Recipe updated = server.updateRecipe(currentRecipe);
+        if (updated == null) {
+            errorCtrl.showServerUnavailableError();
+            return;
+        }
+        applyUpdatedRecipe(updated);
+        openRecipe(currentRecipe);
+
+    }
+
+
+    /**
      * Handling input window for ingredient editing
-     *
      * @param initName the initial name value to be displayed
      * @param initQty  the initial quantity value to be displayed
      * @param handler  the consumer that handles to call back to the value's usage
@@ -546,7 +547,9 @@ public class RecipesWindowCtrl {
             // Edit Logic
             instCtrl.setEditInstruction(newInstruction -> {
                 // This code is run when a string is passed into the editInstruction consumer
-                System.out.println("Instruction edit from " + recipeInstructions.get(currentIndex) + " to " + newInstruction);
+                if(!instruction.equals("New Instruction")) {
+                    System.out.println("Instruction edited successfully");
+                }
                 recipeInstructions.set(currentIndex, newInstruction);
                 Recipe updated = server.updateRecipe(currentRecipe);
                 if (updated == null) {
@@ -574,6 +577,7 @@ public class RecipesWindowCtrl {
             recipeInstructions.add("New Instruction");
             newInstructionAdded = true;
             openRecipe(currentRecipe);
+            System.out.println("Added instruction");
         });
         recipeView.requestLayout();
     }
@@ -593,19 +597,17 @@ public class RecipesWindowCtrl {
     @FXML
     public void onCloneRecipe() {
         cancelSearch();
-        Recipe recipe = currentRecipe;
-        if (recipe == null) {
-            recipe = sidebarRecipeNamesList.getSelectionModel().getSelectedItem();
-        }
-        if (recipe == null) {
+        if (currentRecipe == null) {
+            currentRecipe = sidebarRecipeNamesList.getSelectionModel().getSelectedItem();
             return;
         }
-        String newName = createCopyName(recipe.getName());
-        Recipe clone = cloneRecipe(recipe, newName);
+        String newName = createCopyName(currentRecipe.getName());
+        Recipe clone = cloneRecipe(currentRecipe, newName);
         Recipe savedRecipe = server.addRecipe(clone);
         if(savedRecipe != null){
             storage.getRecipes().add(savedRecipe);
             sidebarRecipeNamesList.getSelectionModel().select(savedRecipe);
+            System.out.println("Cloned recipe \"" + currentRecipe.getName() + "\" to \"" + newName + "\"");
         } else {
             errorCtrl.showGenericError("Recipe not selected to clone.");
         }
@@ -774,7 +776,7 @@ public class RecipesWindowCtrl {
         if (selectedRecipes.isEmpty()) {
             return null; //return null if there are no selected recipes (i.e. the list of selected recipes is empty)
         }
-        return selectedRecipes.get(0);
+        return selectedRecipes.getFirst();
     }
 
     /**
@@ -782,14 +784,19 @@ public class RecipesWindowCtrl {
      *
      * @param recipe The recipe to be selected
      */
-
     public void setSelectedRecipe(Recipe recipe){
         if(!storage.getRecipes().contains(recipe)) return; //if the recipe is not in the list, do nothing
         MultipleSelectionModel<Recipe> selectionModel = sidebarRecipeNamesList.getSelectionModel();
         selectionModel.select(recipe);
     }
 
-
+    /**
+     * Displays a modal dialog for editing an ingredient and returns the entered values
+     *
+     * @param initialName ingredient name
+     * @param initialQuantity ingredient quantity
+     * @return Optional containing the name and quantity if confirmed, otherwise Optional is empty
+     */
     private Optional<Pair<String, String>> showIngredientPopUp(String initialName, String initialQuantity) {
         try {
             FXMLLoader loader = new FXMLLoader(
@@ -825,6 +832,9 @@ public class RecipesWindowCtrl {
         }
     }
 
+    /**
+     * Opens a new window displaying the current shopping list.
+     */
     private void showShoppingList() {
         try {
             FXMLLoader loader = new FXMLLoader(
@@ -850,7 +860,10 @@ public class RecipesWindowCtrl {
         }
     }
 
-
+    /**
+     * Updates the current recipe
+     * @param updated the updated recipe, or null to leave unchanged
+     */
     private void applyUpdatedRecipe(Recipe updated) {
         if (updated == null) {
             return;
@@ -866,11 +879,11 @@ public class RecipesWindowCtrl {
             if (storage.getFavoriteIDs().contains(currentRecipe.getId())) {
                 storage.getFavoriteIDs().remove(currentRecipe.getId());
                 favoriteImage.setImage(unFavorite);
-                System.out.println("Removed from favorites!");
+                System.out.println("Removed \""+currentRecipe.getName()+"\" from favorites!");
             } else {
                 storage.getFavoriteIDs().add(currentRecipe.getId());
                 favoriteImage.setImage(favorite);
-                System.out.println("Added to favorites!");
+                System.out.println("Added \""+currentRecipe.getName()+"\" to favorites!");
             }
             // Regardless of change, put new favorites to file.
             dataManipulator.saveFave();
